<resources>
    <string name="app_name">Bujimu App</string>
    <string name="title_home">Suppliers Information</string>
    <string name="title_records">Recent Analysis</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="records">Records</string>
    <string name="app_label">Bujimu</string>
    <string name="registration">Registration</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="email">Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="site_characteristics">Site Characteristics</string>
    <string name="sampled_area">Field area to be sampled</string>
    <string name="big_trees">How many Big Trees</string>
    <string name="current_cover">Current cover</string>
    <string name="crop_type">Types of Crop</string>
    <string name="save_site_info"><![CDATA[Save & Continue]]></string>
    <string name="farm_history">Farm History</string>
    <string name="dominant_cover">Dominant Cover</string>
    <string name="vegetation_cover">Vegetation cover</string>
    <string name="soil_analysis">Soil Analysis</string>
    <string name="crops_to_be_grown">Crop to be grown</string>
    <string name="soil_tests">Soil Tests - Click to carry out tests</string>
    <string name="nitrogen">Nitrogen</string>
    <string name="save_recommendation">Save Recommendation</string>
    <string name="organic_matter">Organic Matter</string>
    <string name="ph">PH</string>
    <string name="crop">Beans</string>
    <string name="agronomic_information">Agronomic Information</string>
    <string name="_30_days">\@ 30 days</string>
    <string name="_45_days">\@ 45 days</string>
    <string name="forliar">Forliar</string>
    <string name="super_green">Super Green</string>
    <string name="u25ba_fertile">► Fertile</string>
    <string name="u25ba_deep">► Deep</string>
    <string name="npk">NPK</string>
    <string name="top_dressing">Top Dressing</string>
    <string name="urea">UREA</string>
    <string name="planting">\@ Planting</string>
    <string name="basal">Basal</string>
    <string name="dap">DAP</string>
    <string name="allwin">Allwin</string>
    <string name="u25ba_loose_to_tightly_compact_soils">► Loose to tightly compact soils</string>
    <string name="available_fertilizers"><u>Available Fertilizers</u></string>
    <string name="unit_price_50_kg"><u>Unit price @ 50 kg</u></string>
    <string name="_150_000_ugx">150,000 UGX</string>
    <string name="farm_info">Farm Information</string>
    <string name="site_infor">Site Information</string>
    <string name="sign_up">Sign Up</string>
    <string name="username">User Name</string>

    <string-array name="sample_area">
        <item>0.5 – 1.0</item>
        <item>1.5 – 2.0</item>
        <item>2.5 – 3.0</item>
        <item>3.5 – 5.0</item>
        <item>Greater than 5.0</item>
    </string-array>

    <string-array name="field_location">
        <item>Upper summit</item>
        <item>Middle summit</item>
        <item>Lower summit</item>
    </string-array>

    <string-array name="slope_nature">
        <item>Gentle slope</item>
        <item>Steep slope</item>
        <item>Relatively flat</item>
        <item>Flat</item>
    </string-array>

    <string-array name="soil_nature">
        <item>Red with stones</item>
        <item>Red without stones</item>
        <item>Black without stones</item>
        <item>Black with stones</item>
    </string-array>

    <string-array name="degradation_signs">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="anthills">
        <item>0 – 5</item>
        <item>5 – 10</item>
        <item>10 – 15</item>
        <item>Greater than 15</item>
    </string-array>

    <string-array name="foot_paths">
        <item>Across the field</item>
        <item>Along the field</item>
    </string-array>

    <string-array name="big_trees">
        <item>0 – 5</item>
        <item>5 – 10</item>
        <item>10 – 15</item>
        <item>Greater than 15</item>
    </string-array>

    <string-array name="current_cover">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="crop_type">
        <item>Perennial crop</item>
        <item>Annual crop</item>
    </string-array>

    <string-array name="vegetation_cover">
        <item>Yes</item>
        <item>No</item>
    </string-array>

    <string-array name="dominant_cover">
        <item>Commelina bengalis</item>
        <item>Commelina africana</item>
        <item>Impereta Cylindrica</item>
        <item>Biden pilosa</item>
    </string-array>

    <string-array name="crop_names">
        <item>Maize</item>
        <item>Beans</item>
    </string-array>

    <string-array name="oragnic_levels">
        <item>0 – 5 seconds (Low)</item>
        <item>5 – 10 seconds (Medium)</item>
        <item>Greater than 10 seconds (High)</item>
    </string-array>

    <string-array name="fertilizer_levels">
        <item>Deep</item>
        <item>Fertilizer</item>
        <item>Loose to tightly compact soils</item>
    </string-array>
</resources>
